--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1365,29 +1365,37 @@ only screen and (min-width: 1200px) and (max-width: 1399px) {
 /* //////////////////////////////////////// */
 .nav-link {
     color: #fff;
-    /* Set the text color of the buttons */
     border: 1px solid #dc3545 !important;
-    /* Set the border color of the buttons */
     background-color: rgba(0, 0, 0, 0.7) !important;
-    /* Set the background color of the buttons */
-    padding: 13px !important;
-    /* Set the top and bottom padding of the buttons */
+    padding: 16px !important;
+    margin: 8px 10px 0 10px;
     font-weight: bold;
-    /* Set the font weight of the buttons */
+    border-radius: 15px !important;
 }
 
 .nav-link:hover {
     background-color: #dc3545 !important;
-    /* Set the background color of the buttons on hover */
     color: rgba(0, 0, 0, 0.7);
-    /* Set the text color of the buttons on hover */
 }
 
 .nav-link.active {
     background-color: #dc3545 !important;
-    /* Set the background color of the active button */
     color: rgba(0, 0, 0, 0.7) !important;
-    /* Set the text color of the active button */
+}
+
+@media(max-width: 768px) and (min-width: 0px) {
+    .nav-link {
+        color: #fff;
+        border: 1px solid #dc3545 !important;
+        background-color: rgba(0, 0, 0, 0.7) !important;
+        padding: 8px !important;
+        font-weight: 400 !important;
+        display: flex !important;
+    }
+
+    .all-button button {
+        padding: 8px 12px 8px 12px !important;
+    }
 }
 
 /* /////////////////////////////////////// */
@@ -1767,6 +1775,11 @@ only screen and (min-width: 768px) and (max-width: 991px),
     align-items: center;
     justify-content: center;
     font-size: 25px;
+}
+
+.footer_logo:hover {
+    background-color: #dc3545;
+    color: #000;
 }
 
 .footer .footer-social ul li a:hover {
